# media_management_api

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  cut-version.yml
iiif_service/: iiif.py  urls.py  views.py
media_auth/: admin.py  authentication.py  exceptions.py  filters.py  models.py  permissions.py  services.py  urls.py  views.py
media_auth/migrations/: 0003_auto_20160201_1644.py
media_management_api/: middleware.py  urls.py  wsgi.py
media_management_api/media_auth/: admin.py  apps.py  authentication.py  exceptions.py  filters.py  models.py  permissions.py  services.py  urls.py  views.py
media_management_api/media_service/: admin.py  apps.py  filters.py  mediastore.py  models.py  permissions.py  serializers.py  urls.py  views.py
media_management_api/requirements/: base.txt  local.txt
media_management_api/settings/: aws.py  base.py  local.py  secure.py.example  secure.py.travis  test.py
media_service/: admin.py  iiif.py  mediastore.py  models.py  serializers.py  urls.py  views.py
media_service/fixtures/: dev.json  test.json
media_service/migrations/: 0001_initial.py  0002_auto_20151217_1730.py  0003_courseimage_is_upload.py  0003_resource_metadata.py  0004_auto_20151217_1837.py  0004_auto_20170329_1530.py  0005_mediastore_file_type.py  0006_auto_20151218_1706.py
media_service/tests/: test_iiif.py  test_mediastore.py  test_models.py  test_views.py
vagrant/: venv_bootstrap.sh
vagrant/manifests/: default.pp
(+32 files in other folders)
